# ES_PCS_2026

./: prova1.txt
esercitazione1/: CMakeLists.txt  stampa_arg.cpp  temp_citta.cpp
esercitazione10/: CMakeLists.txt  gradiente_coniugato.cpp  main.cpp
esercitazione2/: CMakeLists.txt  Commenti_posMemOgg.txt  PrimiAlg_Bubblesort.cpp  posMemOgg.cpp
esercitazione3/: CmakeLists.txt  rational.hpp  test_rational.cpp
esercitazione4/: CMakeLists.txt  dati_sorting.txt  measure_sorts.cpp  plot_sorts.m  sort_algorithms.hpp  test_selectionsort.cpp
esercitazione5/: CMakeLists.txt  compare_alg.cpp  find_n.cpp  osservazioni_es5.txt  plot_alg.m  sort_algorithms.hpp  tempi_ordinamento.txt  test_bubblesort.cpp  test_insertionsort.cpp  test_mergesort.cpp  test_quicksort.cpp
esercitazione8/: CMakeLists.txt  test_grafo.cpp  unidirected_edge.hpp  unidirected_graph.hpp
esercitazione9/: CMakeLists.txt  containers.hpp  dijkstra.hpp  graph_visit.hpp  main.cpp  recursive_dfs.hpp  unidirected_edge.hpp  unidirected_graph.hpp  write_graph_dot.hpp
